# axum_doc

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  openapi-bak.json
.claude/: settings.local.json
docs/: axum_doc.md  real_world_test_results.md  real_world_test_results_v0.2.1.md
src/: form.rs  main.rs  response.rs  types.rs
tests/: integration_test.rs
tests/fixtures/dup_path_app/: Cargo.toml
tests/fixtures/dup_path_app/src/: main.rs
tests/fixtures/dup_path_app/src/modules/: mod.rs
tests/fixtures/dup_path_app/src/modules/user/: handler.rs  mod.rs
tests/fixtures/modular_app/: Cargo.toml
tests/fixtures/modular_app/src/: main.rs
tests/fixtures/modular_app/src/modules/: auth.rs  auth_handler.rs  mod.rs  user.rs  user_handler.rs
tests/fixtures/simple_app/: Cargo.toml
tests/fixtures/simple_app/src/: form.rs  main.rs  response.rs  types.rs
user/: handlers.rs
