[package]
name = "axum_doc"
version = "0.2.0"
edition = "2021"
authors = ["Alex <your_email@example.com>"]
description = "A CLI tool to generate OpenAPI 3.0 JSON from Axum Rust projects."
license = "MIT"
repository = "https://github.com/ipconfiger/axum_doc"
homepage = "https://github.com/ipconfiger/axum_doc"
documentation = "https://github.com/ipconfiger/axum_doc"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["axum", "openapi", "cli", "swagger", "codegen"]
exclude = [".idea/*", "target/*", "openapi-bak.json"]

[dependencies]
syn = { version = "2.0.104", features = ["full", "visit"] }
quote = "1.0.40"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.5"
clap = { version = "4.0", features = ["derive"] }
regex = "1.11.1"

[[bin]]
name = "axum_doc"
path = "src/main.rs"
